Glossareinträge in die extra Datei gemoved und spelling gefixt

--- a/Entwurf/Entwurfsdokument/Glossar.tex
+++ b/Entwurf/Entwurfsdokument/Glossar.tex
@@ -11,3 +11,7 @@
 \newglossaryentry{TTS}{name=Text-To-Speech, description={Ein Text-to-Speech-System (TTS) (oder Vorleseautomat) wandelt Fließtext in eine akustische Sprachausgabe um. Dabei erfolgt diese auf Deutsch oder auf Englisch, abhängig davon, was als Sprache eingestellt ist.}}
 \newglossaryentry{Earables}{name=Earables, description={Eine Zusammenschließung des Wortes Wearable und Earphone. Dabei handelt es sich um Kopfhörer, die mit Sensoren ausgestattet sind.}}
 \newglossaryentry{Vorgangsdaten}{name=Vorgangsdaten, description={Daten, die bei der Ausführung eines Vorgangs gespeichert werden (z.B. Schritte, Sit-ups,\dots).}}
+\newglossaryentry{Datenbank}{name={Datenbank},
+	description={Die Datenbank speichert die Trainingsdaten in Form von DBEntries. Dabei wird die Datenbank von dem Plugin SQLite benutzt.}}
+\newglossaryentry{CSV}{name={CSV},
+	description={CSV steht für "Comma-Seperated-Value" ein Dateityp, bei dem die Attribute durch ein Komma getrennt werden. Eine Zeile bildet dabei immer einen Eintrag ab. Das Format ist human-readable und veränderbar.}}
