--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -120,7 +120,7 @@ hier kommt ein mal das Klassendiagramm rein mit Verweis auf den Anhang - valle
 %%\section{Klassenübersicht} brauchen wir nicht, da das bei uns schon alles im Inhaltsverzeichnis aufgelistet wird.
 \section{Klassenbeschreibung Model}
 \subsection{Bibliothek}
-\subsubsection{IEarablesConnetion}
+\subsubsection{Class IEarablesConnetion}
 
 \paragraph{Klassenbeschreibung:}
 Diese Klasse ist das Herz der Bibliothek. Sie besitzt alle Schnittstellen, über die später kommuniziert werden kann. Um eine BLE Verbindung herzustellen benutzt sie das Bluetooth LE Plugin for Xamarin. Es handelt sich hierbei um ein Interface um Mocking zu ermöglichen. So kann man eine MockKlasse erstellen, die die Klasse IEarables implementiert um so das implementieren und testen zu vereinfachen.
@@ -156,13 +156,13 @@ Diese Klasse ist das Herz der Bibliothek. Sie besitzt alle Schnittstellen, über
 
 
 
-\subsubsection{EarablesConnetion}
+\subsubsection{Class EarablesConnetion}
 
 \paragraph{Klassenbeschreibung:}
 Die Klasse EarablesConnection impl
 
 
-\subsubsection{Constants}
+\subsubsection{Class Constants}
 \paragraph{Klassenbeschreibung:}
 Die Constants Klasse enthält alle Konstanten, die benötigt werden um die entsprechenden Service, Descriptoren und Charakteristiken aus den Earables zu lesen. Sie ist als static gekennzeichnet da es keinen Sinn macht sie zu instanzieren weil sie nur Konstanten bereitstellt.
 
@@ -179,7 +179,7 @@ Die Constants Klasse enthält alle Konstanten, die benötigt werden um die entsp
 \end{itemize}
 
 
-\subsubsection{LPF\_Gyroscope}
+\subsubsection{Class LPF\_Gyroscope}
 Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für das Gyroscope annehmen kann.
 
 \paragraph{Attribute:}
@@ -196,7 +196,7 @@ Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für d
 \end{itemize}
 
 
-\subsubsection{LPF\_Accelerometer}
+\subsubsection{Class LPF\_Accelerometer}
 Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für das Accelerometer annehmen kann.
 
 \paragraph{Attribute:}
@@ -212,7 +212,7 @@ Dieses Enum beinhaltet alle möglichen Low Pass Filter Werte, die der LPF für d
 \end{itemize}
 
 
-\subsubsection{ConfigContainer}
+\subsubsection{Class ConfigContainer}
 Diese Klasse beinhaltet alle Einstellungsmöglichkeiten für die Earables.
 
 \paragraph{Attribute:}
@@ -223,7 +223,7 @@ Diese Klasse beinhaltet alle Einstellungsmöglichkeiten für die Earables.
 \end{itemize}
 
 
-\subsubsection{IMUDataExtractor}
+\subsubsection{Class IMUDataExtractor}
 Diese Klasse Übernimmt das Umwandeln des Bit Strings in verschiedene Einheiten.
 Die Klasse wurde erstellt um der EarablesConnection Klasse Arbeit abzunehmen und Logik zu entkoppeln, so dass sich die EarablesConnetion
  Klasse nur um die Kommunikation mit den Earables kümmern muss. Sie ist static da es keinen Sinn macht sie zu instanziieren weil sie nur einen Dienst anbietet.
@@ -234,7 +234,7 @@ Die Klasse wurde erstellt um der EarablesConnection Klasse Arbeit abzunehmen und
 \end{itemize}
 
 
-\subsubsection{IMUDataEntry}
+\subsubsection{Class IMUDataEntry}
 Diese Klasse besitzt alle ausgewerteten Informationen, die in einem „Packet“ von den Earables ankommen.
 
 \paragraph{Attribute:}
@@ -244,7 +244,7 @@ Diese Klasse besitzt alle ausgewerteten Informationen, die in einem „Packet“
 \end{itemize}
 
 
-\subsubsection{Gyroscope}
+\subsubsection{Class Gyroscope}
 Diese Klasse besitzt alle ausgewerteten Gyroscopedaten.
 
 \paragraph{Attribute:}
@@ -255,7 +255,7 @@ Diese Klasse besitzt alle ausgewerteten Gyroscopedaten.
 \end{itemize}
 
 
-\subsubsection{Accelerometer}
+\subsubsection{Class Accelerometer}
 Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
 
 \paragraph{Attribute:}
@@ -269,7 +269,7 @@ Diese Klasse besitzt alle ausgewerteten Accelerometer Daten.
 \end{itemize}
 
 
-\subsubsection{Characteristics}
+\subsubsection{Class Characteristics}
 In dieser Klasse werden die Charkterisiken gespeichert um sie nicht jedes mal neu zu laden falls sie gebraucht werden.
 
 \paragraph{Attribute:}
@@ -282,7 +282,7 @@ In dieser Klasse werden die Charkterisiken gespeichert um sie nicht jedes mal ne
 \end{itemize}
 
 
-\subsubsection{DeviceEventArgs}
+\subsubsection{Class DeviceEventArgs}
 Enthält alle relevanten Informationen die benötigt werden, falls sich der Connection Status ändert.
 
 \paragraph{Attribute:}
@@ -297,11 +297,11 @@ Enthält alle relevanten Informationen die benötigt werden, falls sich der Conn
 \end{itemize}
 
 
-\subsubsection{ButtonEventArgs}
+\subsubsection{Class ButtonEventArgs}
 Enthält alle relevanten Informationen die benötigt werden, falls der Knopf der Earables gedrückt wurde. Momentan werden keine Eventargumente gebraucht, aber diese Klasse existiert bereits falls bei der Weiterentwicklung doch Argumente übergeben werden müssen.
 
 
-\subsubsection{DataEventArgs}
+\subsubsection{Class DataEventArgs}
 Enthält alle relevanten Informationen die benötigt werden, falls neue Daten ankamen.
 
 \paragraph{Attribute:}
@@ -321,36 +321,36 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 
 
 \subsection{Erweiterungsmodul}
-	\subsubsection{IManager}
+	\subsubsection{Class IManager}
 	
-	\subsubsection{IActivityManager}
-	\subsubsection{ActivityManager}
+	\subsubsection{Class IActivityManager}
+	\subsubsection{Class ActivityManager}
 	
-	\subsubsection{Activity}
+	\subsubsection{Class Activity}
 	
-	\subsubsection{AbstractSitUpActivity}
-	\subsubsection{SitUpActivityThreshold}
+	\subsubsection{Class AbstractSitUpActivity}
+	\subsubsection{Class SitUpActivityThreshold}
 	
-	\subsubsection{AbstractStepActivity}
-	\subsubsection{StepActivityActivityThreshold}
+	\subsubsection{Class AbstractStepActivity}
+	\subsubsection{Class StepActivityActivityThreshold}
 	
-	\subsubsection{AbstractRunningActivity}
-	\subsubsection{RunningActivityThreshold}
+	\subsubsection{Class AbstractRunningActivity}
+	\subsubsection{Class RunningActivityThreshold}
 	
-	\subsubsection{AbstractPushUpActivity}
-	\subsubsection{PushUpActivityThreshold}
+	\subsubsection{Class AbstractPushUpActivity}
+	\subsubsection{Class PushUpActivityThreshold}
 	
-	\subsubsection{ActivityArgs}
-	\subsubsection{RunningEventArgs}
+	\subsubsection{Class ActivityArgs}
+	\subsubsection{Class RunningEventArgs}
 	
-	\subsubsection{CountableActivityArgs}
-	\subsubsection{PushUpEventArgs}
-	\subsubsection{StepEventActivity}
-	\subsubsection{SitUpActivity}
+	\subsubsection{Class CountableActivityArgs}
+	\subsubsection{Class PushUpEventArgs}
+	\subsubsection{Class StepEventActivity}
+	\subsubsection{Class SitUpActivity}
 	
 
 \subsection{App}
-\subsubsection{ServiceManager}
+\subsubsection{Class ServiceManager}
 	\paragraph{Klassenbeschreibung:}
 	Der ServiceManager verwaltet alle Services des Models mithilfe eines statischen Serviceproviders. Dies wird von anderen Services des Models, sowie von dem Viewmodel benutzt. Er dient zur Delegierung der Services.\\ 
 	Dabei implementiert der ServiceManager das Interface IManager.
@@ -375,7 +375,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 		
 		
 \subsection{Einstellungen Service}
-\subsubsection{ISettingsService}
+\subsubsection{Class ISettingsService}
 	\paragraph{Schnittstellenbeschreibung:}
 	ISettingsService bietet eine Schnittstelle für die Einstellungen der App. Sie implementiert Konstanten zur Identifizierung der Einstellungen und hält die aktuellen Einstellungen als Attribute.
 	\paragraph{Attribute:}
@@ -390,7 +390,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 	\begin{itemize}
 		\item[-] \textbf{LoadSettings():void}\\Lädt alle Settings aus den Einstellungen in die Attribute.	
 	\end{itemize}
-\subsubsection{SettingsService}
+\subsubsection{Class SettingsService}
 	\paragraph{Klassenbeschreibung}
 	Die Klasse SettingsService implementiert die Schnittstelle ISettingsService. Zur Speicherung der Einstellungen wird die Klasse App.Current.Properties verwendet.
 	Dabei wird immer sofort nach einer Änderung die neue Einstellung gespeichert und nicht erst beim Beenden der Sitzung.
@@ -407,7 +407,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 	\begin{itemize}
 		\item[-] \textbf{LoadSettings():void}\\Lädt alle Einstellungen aus den App.Current.Properties in die Attribute.	
 	\end{itemize}
-\subsubsection{User}
+\subsubsection{Class User}
 	\paragraph{Klassenbeschreibung:}
 	Die User-Klasse spezifiziert den Nutzer, der die App gerade verwendet. In dieser werden Attribute gespeichert, welche von Nutzer zu Nutzer anders sind. Falls der Nutzer sein Konto noch nicht eingerichtet hat, wird ein Standardnutzer geladen.\\
 	\paragraph{Attribute:}
@@ -422,7 +422,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 		\item[+] \textbf{static ParseUser(user: String): User}\\Statische Methode, welche einen \Gls{CSV}-String wieder in  ein Objekt umwandelt. Das Format ist in der ToString() Methode spezialisiert. Falls der übergeben String nicht dem Format entspricht, so wird 'null' zurückgegeben.\\
 	\end{itemize}
 
-\subsubsection{SamplingRate}
+\subsubsection{Class SamplingRate}
 	\paragraph{Enumerationbeschreibung}
 
 	
@@ -433,7 +433,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 	
 	
 \subsection{Datenbank Service}
-\subsubsection{IDataBaseConnection}
+\subsubsection{Class IDataBaseConnection}
 	\paragraph{Schnittstellenbeschreibung}
 	Das Interface IDataBaseConnection ist ein Service, welcher vom ServiceManager verwaltet wird. Dieser regelt Speicherung der Trainingsdaten mittels einer \gls{Datenbank}. Zudem verwaltet sie das Importieren und Exportieren von den Trainingsdaten.
 	Die Datenbankeinträge sind Instanzen der Klasse DBEntry. 
@@ -447,7 +447,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 		\item[+] \textbf{ExportTrainingData(path: String): void}\\Exportiert die Trainingsdaten aus der \gls{Datenbank} in einer \gls{CSV}-Datei in den Ordner bei path. \\
 	\end{itemize}
 
-\subsubsection{DataBaseConnection}
+\subsubsection{Class DataBaseConnection}
 	\paragraph{Klassenbeschreibung}
 	Die Klasse DataBaseConnection implementiert die Schnittstelle IDataBaseConnection. Sie kümmert sich um die Speicherung und Verwaltung der Trainingsdaten. Dabei benutzt die DataBaseConnection die \gls{Datenbank} von SQLite. Es werden Objekte von der Klasse DBEntry gespeichert. 
 	
@@ -464,7 +464,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 		\item[+] \textbf{ImportTrainingData(file: FileData): void}\\Liest aus der angegebenen \gls{CSV}-Datei die DBEnries raus und speichert sie in der \gls{Datenbank}. Er erstellt die DBEntry mithilfe der statischen Methode ParseDBEntry(entry : String) der Klasse DBEntry\\
 		\item[+] \textbf{ExportTrainingData(path: String): void}\\Exportiert die Trainingsdaten aus der \gls{Datenbank} in einer \gls{CSV}-Datei in den Ordner bei path. \\
 	\end{itemize}
-\subsubsection{DBEntry}
+\subsubsection{Class DBEntry}
 	\paragraph{Klassenbeschreibung}
 	Die Klasse DBEntry ist ein Datenkontainer, welcher einen Trainingstag darstellt. Dieser wird in der Datenbank gespeichert. DBEntry beinhaltet kein selbstständiges Verhalten. Für die Modularität sind die unterschiedlichen Attribute in einem Dictionary gespeichert.
 	
