PopUpScanning Beschreibung hinzugefügt

--- a/Entwurf/Entwurfsdokument/Glossar.tex
+++ b/Entwurf/Entwurfsdokument/Glossar.tex
@@ -15,3 +15,5 @@
 	description={Die Datenbank speichert die Trainingsdaten in Form von DBEntries. Dabei wird die Datenbank von dem Plugin SQLite benutzt.}}
 \newglossaryentry{CSV}{name={CSV},
 	description={CSV steht für "Comma-Seperated-Value" ein Dateityp, bei dem die Attribute durch ein Komma getrennt werden. Eine Zeile bildet dabei immer einen Eintrag ab. Das Format ist human-readable und veränderbar.}}
+\newglossaryentry{Rg.Plugins.Popup}{name={Rg.Plugins.Popup},
+	description={Rg.Plugins.Popup ist eine Erweiterung (Plugin), welche es einem ermöglicht Pop-up Fenster zu erstellen und anzuzeigen. Dabei ist das Plugin über den Pluginmanager 'NuGet' einbindbar.}}
